--- a/excercise2.html
+++ b/excercise2.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="excercise2.css">
 </head>
 <body>
-   
+    <div class ="backgroundcolor">
+
+    </div>
     <main>
         <div class = "container"> 
             <div class="content-wrapper">
